[Impeller] cache for text shadows. (#166228)
Fixes https://github.com/flutter/flutter/issues/164303
Fixes https://github.com/flutter/flutter/issues/165116

When rendering a text shadow, cache the resulting snapshot for at least
one frame. Only attempts to content-aware hash for single glyphs
(Icons). in other cases the exact layout may be different enough that
its not worth trying to cache.

--- a/engine/src/flutter/impeller/entity/BUILD.gn
+++ b/engine/src/flutter/impeller/entity/BUILD.gn
@@ -179,6 +179,8 @@ impeller_component("entity") {
     "contents/sweep_gradient_contents.h",
     "contents/text_contents.cc",
     "contents/text_contents.h",
+    "contents/text_shadow_cache.cc",
+    "contents/text_shadow_cache.h",
     "contents/texture_contents.cc",
     "contents/texture_contents.h",
     "contents/tiled_texture_contents.cc",
